www/css/style.css
/* borderless button for survey item */

.itembutton {
    border-width: 0px;
    background-color: transparent;
    border-radius: 50%;
    min-width: 48px;
}

/* selected survey item */
.selecteditembutton {
    border-width: 5px;
    border-color: #11c1f3;
    border-radius: 50%;
    background-color: transparent;
    position: relative;
    top: -5px;
}

#nextButton {
    position:fixed;
    bottom: 10vh;
    right: 10vh;
    z-index: 1;
}

.horizontal_center {
    /* for horizontal_center class */
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

/* card holds question in survey view*/
.survey-card {
    margin: 20px;
    padding: 5px;
}

#question-text {
    text-align: center;
    font-size: 1.25em;
}

#anchor-container {
    position: fixed;
    z-index: 1;
    bottom: 30%;
    width: 100%;
}

#anchor-container > p {
    margin:0px;
}

.tabs-calm {
    position: fixed;
    bottom: 0px;
}

.feedback-buttons {
    margin-left: auto;
    margin-right: auto;
    width: 45%;
    display: block;
}

#post-feedback-msg {
    display: none;
}

#scale-container {
    position: relative;
}

/*
=================
Styles for disclaimer/privacy policy/consent
=================
*/
#accept-container {
    position: relative;
    width: 100%;
    height: 50px;
    margin-top: 10px
}

/* change color for checkbox to match*/
.checkbox input:checked:before {
    background: #11c1f3;
    border-color: #ddd;
}

.accept-checkbox {
    position: absolute;
    left: 40px;
}

#continueButton {
    position: absolute;
    right: 10px;
}

#acceptButton {
    position: absolute;
    right: 50px;
}

#declineButton {
    position: absolute;
    left: 50px;
}

/*
===============
Styles for alert box button color
===============
*/
.button.button-positive {
    background: #11c1f3;
    border-color: #ddd;
}

/*
================
Styles for setup screen button positioning
================
*/

#setup-button-container {
    position: relative;
    top: 30vh
}

#setupBackButton {
    top: 10px;
}

/*
=================
Styles for demographics view
=================
*/

#demographicsContinueButton {
    margin-top: 10px;
}

#otherEthnicityTextBox.list {
    margin-bottom: 0px;
}

